@@ -1,3 +1,8 @@
+2021-07-02 James D. Trotter <james@simula.no>
+
+	Add the function `mtx_matrix_size_per_row' to count the number of
+	entries stored in each row of a matrix.
+
 2021-06-30 James D. Trotter <james@simula.no>
 
 	Allow specifying a format string for outputting numerical values
